deploy/k8s/overlays/prod/ingress-live.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: battlecats-live
  annotations:
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-prod-cloudflare
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: battlecats.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: battlecats
                port:
                  number: 80
  tls:
    - hosts:
        - battlecats.lol
        - www.battlecats.lol
      secretName: battlecats-live-tls
